<resources>
    <string name="app_name">Calculator</string>
    <string name="result">Result = </string>
    <string name="undo">Undo</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">*</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="redo">Redo</string>
    <string name="hint_second_operand">Please enter the second operand</string>
    <string name="message_missing_second_operand">Please enter second operand</string>
    <string name="message_missing_operation">Please select an operation</string>
</resources>