<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_second_operand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_input_second_operand"
        android:hint="@string/hint_second_operand"
        android:inputType="number"
        android:padding="16dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <TextView
        android:id="@+id/tv_undo_operand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/undo"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_second_operand" />

    <TextView
        android:id="@+id/tv_equal_operand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/equal"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operations_chip_group" />

    <TextView
        android:id="@+id/tv_redo_operand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/redo"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/operations_chip_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_second_operand" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/operations_chip_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="4dp"
        app:chipSpacingHorizontal="12dp"
        app:chipSpacingVertical="12dp"
        app:itemSpacing="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_undo_operand"
        app:layout_constraintEnd_toStartOf="@+id/tv_redo_operand"
        app:layout_constraintStart_toEndOf="@+id/tv_undo_operand"
        app:layout_constraintTop_toTopOf="@+id/tv_undo_operand"
        app:lineSpacing="12dp"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_carrier_list_filter_bg_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_carrier_list_filter_bg_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/multiple"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_carrier_list_filter_bg_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/divide"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold"
            app:checkedIconVisible="false"

            app:chipBackgroundColor="@color/chip_carrier_list_filter_bg_state_list" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_operationHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_equal_operand"
        tools:layout_editor_absoluteX="16dp">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>